--- a/game.conf
+++ b/game.conf
@@ -1,3 +1,3 @@
-name = Minetest Game
-author = Minetest
-description = Bundled by default with Minetest, and aims to be lightweight, moddable, and fairly playable without mods.
+name = EastAPOLO Game
+author = EastAPOLO
+description = My own subgame that is inspired by Minecraft and aims to be moddable.
